--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       100% { box-shadow: 0 0 0 0 rgba(56, 189, 248, 0); }
     }
     .field-highlight input { animation: field-pulse 0.8s ease-out 2; border-radius: 0.5rem; }
+    @keyframes row-flash {
+      0% { background-color: rgba(56, 189, 248, 0.18); }
+      100% { background-color: transparent; }
+    }
+    .row-highlight { animation: row-flash 1.2s ease-out; border-radius: 0.375rem; }
   </style>
 </head>
 <body>
@@ -454,8 +459,27 @@
     }
 
     function MetricRow({ label, value, badge, tip, border = true, indent = false, large = false }) {
+      const rowRef = useRef(null);
+      const prevValueRef = useRef(value);
+      const prevBadgeRef = useRef(badge?.level);
+      const mountedRef = useRef(false);
+
+      const triggerFlash = () => {
+        const el = rowRef.current;
+        if (el) { el.classList.remove("row-highlight"); void el.offsetWidth; el.classList.add("row-highlight"); }
+      };
+
+      useEffect(() => {
+        if (!mountedRef.current) { mountedRef.current = true; return; }
+        const valueChanged = prevValueRef.current !== value;
+        const badgeChanged = prevBadgeRef.current !== (badge?.level);
+        prevValueRef.current = value;
+        prevBadgeRef.current = badge?.level;
+        if (valueChanged || badgeChanged) triggerFlash();
+      }, [value, badge?.level]);
+
       return (
-        <div className={"flex items-center justify-between py-2.5 " + (border ? "border-b border-slate-100 " : "") + (indent ? "pl-3 border-l border-slate-200" : "")}>
+        <div ref={rowRef} className={"flex items-center justify-between py-2.5 px-1 -mx-1 " + (border ? "border-b border-slate-100 " : "") + (indent ? "pl-3 border-l border-slate-200" : "")}>
           <span className="text-xs text-slate-500 flex items-center flex-shrink-0">
             {label}{tip && <Tip text={tip} />}
           </span>
@@ -463,6 +487,51 @@
           <div className="flex items-center gap-2 flex-shrink-0">
             {badge && <Badge level={badge.level} color={badge.color} />}
             <span className={large ? "text-base font-bold text-slate-800" : "text-sm font-semibold text-slate-800"}>{value}</span>
+          </div>
+        </div>
+      );
+    }
+
+    function RealityRows({ reality }) {
+      const exitRef = useRef(null);
+      const marketRef = useRef(null);
+      const prevExitRef = useRef(fmtResult(reality.exitVal));
+      const prevSamRef = useRef(reality.samPct != null ? fmtPct(reality.samPct) : null);
+      const mountedRef = useRef(false);
+
+      const exitDisplay = fmtResult(reality.exitVal);
+      const samDisplay = reality.samPct != null ? fmtPct(reality.samPct) + " of SAM" : "\u2014";
+
+      useEffect(() => {
+        if (!mountedRef.current) { mountedRef.current = true; return; }
+        if (prevExitRef.current !== exitDisplay) {
+          prevExitRef.current = exitDisplay;
+          const el = exitRef.current;
+          if (el) { el.classList.remove("row-highlight"); void el.offsetWidth; el.classList.add("row-highlight"); }
+        }
+        const currentSam = reality.samPct != null ? fmtPct(reality.samPct) : null;
+        if (prevSamRef.current !== currentSam) {
+          prevSamRef.current = currentSam;
+          const el = marketRef.current;
+          if (el) { el.classList.remove("row-highlight"); void el.offsetWidth; el.classList.add("row-highlight"); }
+        }
+      }, [exitDisplay, samDisplay]);
+
+      return (
+        <div className="space-y-2">
+          <div ref={exitRef} className="flex items-center justify-between py-1.5 px-1 -mx-1 border-b border-current/10">
+            <span className="text-xs text-slate-600">Exit Difficulty</span>
+            <div className="flex items-center gap-2">
+              <span className="text-xs font-semibold text-slate-700">{fmtResult(reality.exitVal)}</span>
+              {reality.exitA && <Badge level={reality.exitA.level} color={reality.exitA.color} />}
+            </div>
+          </div>
+          <div ref={marketRef} className="flex items-center justify-between py-1.5 px-1 -mx-1">
+            <span className="text-xs text-slate-600">Market Capture</span>
+            <div className="flex items-center gap-2">
+              <span className="text-xs font-semibold text-slate-700">{samDisplay}</span>
+              {reality.samA && <Badge level={reality.samA.level} color={reality.samA.color} />}
+            </div>
           </div>
         </div>
       );
@@ -980,22 +1049,7 @@
                        reality.worst === "orange" ? "Aggressive" : "Significant Concerns"}
                     </span>
                   </div>
-                  <div className="space-y-2">
-                    <div className="flex items-center justify-between py-1.5 border-b border-current/10">
-                      <span className="text-xs text-slate-600">Exit Difficulty</span>
-                      <div className="flex items-center gap-2">
-                        <span className="text-xs font-semibold text-slate-700">{fmtResult(reality.exitVal)}</span>
-                        {reality.exitA && <Badge level={reality.exitA.level} color={reality.exitA.color} />}
-                      </div>
-                    </div>
-                    <div className="flex items-center justify-between py-1.5">
-                      <span className="text-xs text-slate-600">Market Capture</span>
-                      <div className="flex items-center gap-2">
-                        <span className="text-xs font-semibold text-slate-700">{reality.samPct != null ? fmtPct(reality.samPct) + " of SAM" : "\u2014"}</span>
-                        {reality.samA && <Badge level={reality.samA.level} color={reality.samA.color} />}
-                      </div>
-                    </div>
-                  </div>
+                  <RealityRows reality={reality} />
                   {reality.summary && (
                     <p className="text-xs leading-relaxed text-slate-600 mt-3 pt-2 border-t border-current/10">{reality.summary}</p>
                   )}
